Fixes main layout title alignment for mobile

--- a/assets/sass/_posts.scss
+++ b/assets/sass/_posts.scss
@@ -33,6 +33,15 @@ body.post, body.main {
       }
     }
 
+    @include media($mobile-breakpoint) {
+      h1 {
+        text-align: center;
+        .tag {
+          padding-right: 0;
+        }
+      }
+    }
+
     nav {
       background-color: $home-base-color;
 
